--- a/style.css
+++ b/style.css
@@ -1,29 +1,118 @@
-#head{
-    background-color: lightskyblue;
-    width:100% ;
-    height: 50px;
-    margin-bottom:10px ;
-}
-h1{
-    margin: 0px
-}
-.post{
-    width: 800px;
-    border:2px solid black;
-    border-radius: 25px;
-    padding: 20px;
-    background-color:red;
-}
-img{
-    width: 100%;
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-#main_img{
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #cadefc;
+}
+
+
+#head {
+    background-color:#cca8e9;
+    color:black;
+    text-align: center;
+    padding: 20px 0;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+#main_img img {
     width: 100%;
-    height: 400px;
-    
+    height: auto;
+    object-fit: cover;
+    max-height: 350px;
 }
-*{
-    margin: 0px;
-    padding: 0px;
+
+
+#categories {
+    width: 250px;
+    float: left;
+    padding: 20px;
+    background-color: #defcf9;
+    margin-top: 20px;
 }
+
+h4 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+
+.container {
+    margin-left: 270px; 
+    padding: 20px;
+}
+
+
+.post {
+    background-color: #c3bef0;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 4px  #defcf9;
+    border-radius: 15px;
+    margin-right: 200px;
+}
+
+.post h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.post p {
+    font-size: 1em;
+    color: #555;
+}
+
+.post_img img {
+    width: 100%;
+    height: 50rem;
+    max-height: 350px; 
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.post ol {
+    margin-left: 20px;
+}
+
+.post ol li {
+    margin-bottom: 10px;
+}
+
+
+@media (max-width: 900px) {
+    #categories {
+        width: 100%;
+        float: none;
+        margin: 0 auto;
+    }
+
+    .container {
+        margin-left: 0;
+        
+    }
+}
+
+@media (max-width: 480px) {
+    #head h1 {
+        font-size: 1.5em;
+    }
+
+    .post h3 {
+        font-size: 1.2em;
+    }
+}
+
